Overflow fix

--- a/source/stylesheets/flex.css
+++ b/source/stylesheets/flex.css
@@ -17,6 +17,7 @@
     position: absolute;
     top: calc(100vh - 130px);
     animation: carousel_list 40s ease-out infinite;
+    overflow: hidden;
 }
 
 .line_background {
